// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartHeatmap component get data error 1`] = `
<div>
  <div
    class="sc-dkPtRN drAAzJ"
  >
    <h2
      class="sc-gsDKAQ ioZYxa"
    >
      Error: Network Error
    </h2>
  </div>
</div>
`;

exports[`ChartHeatmap component get data success 1`] = `
<div>
  <div
    class="sc-dkPtRN drAAzJ"
  >
    <h5
      class="sc-hKwDye gbEqEH"
    >
      Device By Hour
    </h5>
    <div
      class="sc-eCImPb kzSnaY"
    >
      <chart
        height="350"
        options="[object Object]"
        series="[object Object],[object Object]"
        type="heatmap"
      />
    </div>
    <div
      class="sc-jRQBWg hDopDm"
    >
      <chart
        height="350"
        options="[object Object]"
        series="[object Object]"
        type="bar"
      />
    </div>
    <div
      class="sc-gKclnd kNuMdl"
    />
    <div
      class="sc-iCfMLu dIweau"
    >
      <span>
        0
      </span>
      <span>
        10
      </span>
      <span>
        20
      </span>
      <span>
        30
      </span>
      <span>
        40
      </span>
      <span>
        50
      </span>
    </div>
  </div>
</div>
`;

exports[`ChartHeatmap component loading data 1`] = `
<div>
  <div
    class="sc-dkPtRN drAAzJ"
  >
    <div
      class="sc-bdvvtL heGnFz"
    >
      <div
        class="spinner-border"
      />
    </div>
  </div>
</div>
`;
